--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,15 @@
 [build]
   command = "npm run build"
-  publish = ".next"
+  publish = "out"
+  base = "."
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[plugins]]
-  package = "@netlify/plugin-nextjs" 
+  package = "@netlify/plugin-nextjs"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200 
