--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@types/uuid": "^10.0.0",
     "daisyui": "^5.0.46",
     "firebase": "^11.10.0",
     "next": "15.4.1",
@@ -21,7 +22,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-firebase-hooks": "^5.1.1",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
