--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/uuid": "^10.0.0",
     "daisyui": "^5.0.46",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.12",
     "next": "15.4.1",
     "next-firebase-auth": "^1.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "sass": "^1.89.2",
+    "typewriter-effect": "^2.22.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
