--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.4.1",
     "next-firebase-auth": "^1.4.0",
     "react": "19.1.0",
+    "react-awesome-loaders": "^0.1.37",
     "react-dom": "19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "sass": "^1.89.2",
