Add Python configuration to netlify.toml for build environment
- Added PYTHON and npm_config_python variables to specify the Python version for the build process, ensuring compatibility with dependencies that require Python.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  PYTHON = "/usr/bin/python3"
+  npm_config_python = "/usr/bin/python3"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
