fix netlify pipeline installation issue

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci --force --ignore-scripts && npm run build"
+  command = "npm install --force --ignore-scripts && npm run build"
   publish = "out"
   base = "."
 
