--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
+    "@google/genai": "^1.13.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@types/uuid": "^10.0.0",
