Update Netlify deployment configuration and enhance deployment guide
- Revised the deployment guide to reflect the new configuration for deploying the Care Flow application on Netlify, including server-side rendering support for API routes.
- Updated `netlify.toml` to change the publish directory to `.next` and streamline the build command.
- Added detailed steps for setting environment variables and deployment processes, ensuring clarity for users.
- Included troubleshooting tips and performance considerations to enhance deployment success.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,24 @@
 [build]
-  command = "npm install --force --ignore-scripts && npm run build"
-  publish = "out"
-  base = "."
+  command = "npm run build"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
-  PYTHON = "/usr/bin/python3"
-  npm_config_python = "/usr/bin/python3"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+# Handle API routes
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/___netlify-handler"
+  status = 200
+
+# Handle all other routes
 [[redirects]]
   from = "/*"
-  to = "/index.html"
-  status = 200 
+  to = "/.netlify/functions/___netlify-handler"
+  status = 200
 
 [context.deploy-preview]
   skip = true
