--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "daisyui": "^5.0.46",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.12",
+    "motion": "^12.23.12",
     "next": "15.4.1",
     "next-firebase-auth": "^1.4.0",
     "react": "19.1.0",
